fix: 单机残留与安全缺口修复（二轮自检）
单机模式：
- LogCleanTask 定时清理加 Redisson 分布式锁（多实例仅一台执行）

安全：
- SysUser.password @JsonIgnore：用户列表/详情不再外泄密码哈希
- XSS 双路径防护：XssFilter（query/header 转义，置于 Security 之前）
  + @Xss 校验注解（DTO body 字段命中脚本模式直接拒绝）
- CORS 白名单配置化（cors.allowed-origins），移除 * + credentials
- actuator 收窄为 health/info（其余需认证）
- jwt secret 支持环境变量覆盖（JWT_SECRET）

验证：5 项测试全绿 + 运行时五连验证（XSS 拦截/参数转义/密码不外泄/actuator/CORS）